--- a/package.json
+++ b/package.json
@@ -17,8 +17,8 @@
   "license": "ISC",
   "type": "module",
   "dependencies": {
-    "@arcjet/inspect": "^1.1.0",
-    "@arcjet/node": "^1.1.0",
+    "@arcjet/inspect": "1.0.0-beta.10",
+    "@arcjet/node": "1.0.0-beta.11",
     "dotenv": "^17.2.4",
     "drizzle-orm": "^0.45.1",
     "express": "^5.2.1",
