--- a/package.json
+++ b/package.json
@@ -17,8 +17,7 @@
   "license": "ISC",
   "type": "module",
   "dependencies": {
-    "@arcjet/inspect": "1.0.0-beta.10",
-    "@arcjet/node": "1.0.0-beta.11",
+    "@arcjet/node": "1.0.0",
     "dotenv": "^17.2.4",
     "drizzle-orm": "^0.45.1",
     "express": "^5.2.1",
@@ -27,6 +26,7 @@
     "zod": "^4.3.6"
   },
   "devDependencies": {
+    "@arcjet/inspect": "1.0.0",
     "@types/pg": "^8.16.0",
     "drizzle-kit": "^0.31.9",
     "tsx": "^4.21.0",
